<resources>
    <string name="app_name">TokiApp</string>
    <string name="txt_login"><b>Login</b></string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="bt_login">Entrar</string>
    <string name="txck_registro"><u>Registrarse</u></string>
    <string name="mns_datosLoginIncorrectos">Los datos de Login son incorrectos</string>
    <string name="bt_registro">Registrarse</string>
    <string name="txt_registro"><b>Registro</b></string>
    <string name="mns_usuarioYaexiste">Ya existe un usuario con ese nombre</string>
    <string name="mns_registroCorrecto">El registro se ha realizado correctamente</string>
    <string name="cb_mantenerSesion">Mantener sesión iniciada</string>
    <string name="menu_tl_logout">Log out</string>
    <string name="mns_userPassEmpty">Los campos no pueden estar vacios</string>
    <string name="mns_userEspacio">El usuario no puede contener espacios</string>
    <string name="title_activity_maps">Map</string>
    <string name="descripcion">Descripción</string>
    <string name="nombre">Nombre</string>
    <string name="privado">Privado</string>
    <string name="comentario">Comentario</string>
    <string name="anadir">Añadir</string>
    <string name="ubicacion">Ubicación</string>
    <string name="cogerDeMapa">Coger de mapa</string>
    <string name="actual">Actual</string>
    <string name="dg_titNOgps">GPS</string>
    <string name="dg_msgNOgps">Conecte el gps para la ubicación actual</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="selecciona">Elige</string>
    <string name="tag">Categoría</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_public">Explorar</string>
    <string name="nav_privado">Mis sitios</string>
    <string name="nav_anadir">Añadir sitio</string>
    <string name="nav_logout">Log out</string>


    <string name="mis_sitios">Mis Sitios</string>
    <string name="explorar">Explorar</string>
    <string name="anadirSitio">Añadir \nnuevo sitio</string>
    <string name="anadirComentario">Añadir comentario</string>
    <string name="mensajeComentarioAnadido">El comentario ha sido añadido correctamente</string>
    <string name="noRelleno">Rellene todos los campos</string>
    <string name="comentarioNoAnadido">Comentario no añadido</string>
    <string name="mostrar">Mostrar</string>
    <string name="sitioBorrado">El sitio se ha borrado correctamente</string>
    <string name="error">Ha ocurrido algun error</string>
    <string name="sitioEditado">El sitio se ha editado correctamente</string>
    <string name="title_activity_tabs_public">TabsPublic</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dg_titFaltaInfo">Faltan datos</string>
    <string name="dg_msgFaltaInfo">Rellena los campos de nombre, descripción y ubicación por lo menos</string>
    <string name="borrar">BORRAR</string>
    <string name="editar">EDITAR</string>
    <string name="title_informacion_general"><b>Información general</b></string>
    <string name="title_ubicacion"><b>Ubicación</b></string>
    <string name="marca_check">Marcalo para crear un sitio que solo puedas ver tu</string>
    <string name="nada_ubic">No has seleccionado una ubicación</string>
    <string name="title_imagenes"><b>Imágenes</b></string>
    <string name="informacion">Información</string>
    <string name="comentarios">Comentarios</string>
    <string name="anadirComentarioTitle">Añadir Comentario</string>
    <string name="dg_sinPermisoLocalizacion">Acción no permitida</string>
    <string name="dg_msg_sinPermisoLocalizacion">Para poder enviar la ubicación debe dar permiso a la app</string>
    <string name="dg_sinPermisoGaleria">Acción no permitida</string>
    <string name="dg_msg_sinPermisoGaleria">Para poder añadir fotos de galería debe dar permiso a la app</string>
    <string name="anadirSitiocorrecto">El sitio ha sido añadido correctamente</string>
    <string name="dg_sinInternet">Problema de conexión</string>
    <string name="dg_msg_sinInternet">Ha habido un problema al conectarse al servidor, comprueba que tienes conexión e inténtalo de nuevo</string>
    <string name="dg_tituloEliminar">Eliminar Sitio</string>
    <string name="dg_mnsEliminar">¿Quieres eliminar este sitio?</string>
    <string name="dg_op1SI">Si</string>
    <string name="dg_op2No">No</string>
</resources>
