<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amaia.grupo.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_comienzo_title_page"
        android:layout_marginTop="@dimen/margen_arriba_page"
        android:text="@string/txt_login"
        android:textSize="@dimen/tamano_title_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_final"
        android:layout_marginStart="@dimen/margen_comienzo"
        android:layout_marginTop="@dimen/margen_debajo_title_page"
        android:ems="10"
        android:textSize="@dimen/tamano_value_page"
        android:hint="@string/txt_usuario"
        android:inputType="text"
        android:maxLength="@integer/limit_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_final"
        android:layout_marginStart="@dimen/margen_comienzo"
        android:layout_marginTop="@dimen/margen_debajo_title_page"
        android:ems="10"
        android:textSize="@dimen/tamano_value_page"
        android:hint="@string/txt_contrasena"
        android:inputType="textPassword"
        android:maxLength="@integer/limit_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <CheckBox
        android:id="@+id/cb_mantenerSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_final"
        android:layout_marginStart="@dimen/margen_comienzo"
        android:layout_marginTop="@dimen/margen_debajo_values"
        android:textSize="@dimen/tamano_tag"
        android:text="@string/cb_mantenerSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_final"
        android:layout_marginStart="@dimen/margen_comienzo"
        android:layout_marginTop="@dimen/margen_debajo_values_btn"
        android:text="@string/bt_login"
        android:textSize="@dimen/tamano_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_mantenerSesion" />

    <TextView
        android:id="@+id/txck_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margen_final"
        android:layout_marginStart="@dimen/margen_comienzo"
        android:layout_marginTop="@dimen/margen_debajo_values"
        android:clickable="true"
        android:textSize="@dimen/tamano_tag"
        android:focusable="true"
        android:text="@string/txck_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login" />
</android.support.constraint.ConstraintLayout>
